--- a/index.html
+++ b/index.html
@@ -13,10 +13,15 @@
         <h2> To-Do List <img src="images/icon.png"></h2>
         <div class="row">
             <input type="text" id="input-box" placeholder="Legg til tekst">
-            <button> Legg til</button> 
+            <button onclick="addTask()"> Legg til</button> 
         </div>
+        <ul id="list-container">
+            <!-- <li class="sjekk"> Oppgave 1</li>
+            <li> Oppgave 2</li>
+            <li> Oppgave 3</li> -->
+        </ul>
     </div>
 </div>
-
+<script src="script.js"></script>
 </body>
 </html>
